Fixed tooltip positioning issue
- The issue was there because of tooltip content was given the absolute position
  in relation to where it was rendered initially. Hence once a page is scrolled
  the content of the page was rendered out of the viewport

- Fix: Render content in relation to the current position of the tooltip icon
       instead of absolute position.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/components/tooltip/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/components/tooltip/index.scss
@@ -15,19 +15,26 @@
  */
 @import "../../global/common";
 
-$tooltip-min-width: 300px;
+$tooltip-min-width:    300px;
 $tooltip-medium-width: 500px;
-$tooltip-large-width: 700px;
+$tooltip-large-width:  700px;
 
 .tooltip-wrapper {
   position: static;
   display:  inline-block;
   cursor:   help;
+
   &:hover {
     .tooltip-content {
       display: block;
     }
   }
+}
+
+.tooltip-content-wrapper {
+  position: relative;
+  top:      0;
+  left:     0;
 }
 
 .tooltip-content {
@@ -43,6 +50,7 @@ $tooltip-large-width: 700px;
   padding:       10px 20px 0;
   box-shadow:    0 2px 4px $box-shadow-color;
   z-index:       map_get($zindex, submenu);
+
   &:before {
     content:          "";
     position:         absolute;
